syntax = "proto3";

import "google/protobuf/any.proto";

package messages;

// message Message {
//   Topic topic = 1;
//   google.protobuf.Any payload = 2;
// }

enum Topic {
  UNKNOWN = 0;
  COLLATION_BODY_REQUEST = 1;
  COLLATION_BODY_RESPONSE = 2;
} 

message CollationBodyRequest {
  uint64 shard_id = 1;
  uint64 period = 2;
  bytes chunk_root = 3;
  bytes proposer_address = 4;
  bytes signature = 5;
}

message CollationBodyResponse {
  bytes header_hash = 1;
  bytes body = 2;
}
